--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -3,25 +3,16 @@
 @import "tailwindcss";
 
 @theme{
-    --color-primary: #1E40AF;
-    --color-secondary: #FBBF24;
+    --color-primary: #CEA72B;
+    --color-secondary: #24439C;
     --font-display: 'Inter', sans-serif;
 }
 
-/*
-Source - https://stackoverflow.com/a
-Posted by nayemalways, modified by community. See post 'Timeline' for change history
-Retrieved 2025-12-29, License - CC BY-SA 4.0
-*/
-
-    @layer base {
-      * {
-        /* margin: 0; */
-        /* padding: 0; */
+@layer base {
+    * {
         box-sizing: border-box;
-        /* scroll-behavior: smooth; */
-      }
     }
+}
 
 
 html {
